# wei_workcell_cypherlab

./: .env  Makefile  README.md  compose.yaml  cypherlab.env
applications/drone_app/: README.md  pyproject.toml
applications/drone_app/src/: cypherlab_app.py
applications/drone_app/workflows/: cypherlab.workflow.yaml
workcells/: cypherlab.workcell.yaml
